# vkrm_code

./: .gitignore  README.md  pyproject.toml
data/: aligned_ticker_1878.json  new_aligned_tickers_2128.json  new_tickers_2139.json  ych_filtered_tickers.json  ycharts_oroginal_ticker_list.json
data/aligned_data/: asset_turnover.csv  benchmark_sp500.csv  prices.csv  returns.csv  volume.csv  ychopmdf.csv
data/ycharts/: asset_turnover.csv  assets_annual_final.csv  operating_margin_ttm.csv  revenues_annual_final.csv
data/ycharts/assets_annual_parqs/: A.parquet  AACAF.parquet  AACAY.parquet  AAL.parquet  AAON.parquet  AAP.parquet  AAPL.parquet  AAT.parquet  AATC.parquet  AAV.TO.parquet  AAVVF.parquet  ABB.parquet  ABC.parquet  ABCZF.parquet  (+2125 more)
data/ycharts_opm/: ycharts_operating_margins_dropped.xlsx  ycharts_operating_margins_original.xlsx  ycharts_opm_filtered_for_use.xlsx
data/yf/: company_info.csv  new_tickers_2146.json  stocks3m_yf.csv.xz
src/: combine.ipynb  get_yf_sectors.ipynb  main.py  merging.py  parsers.py  pw.ipynb  sectors_setup.ipynb  stock_download_yahoo_for_kr_v2.py
tests/: test_strategies.py
tests/test_files/: test_asset_turnover.csv  test_company_info.csv  test_diff_vector.csv  test_prices.csv  test_returns.csv  test_volume.csv  test_ychopmdf.csv
vkrm_code/: data_alignment.ipynb  get_yf_sectors.ipynb  main.ipynb  merge_ycharts_scapes.ipynb  setup_tests.ipynb  stats_tools.py  test.ipynb  test.py  workbench.ipynb  ych_opm_analysis.ipynb  ych_scrape.py
vkrm_code/strategies/: __init__.py  main.py
vkrm_code/ycharts_parsers/: __init__.py  parsers.py
(+6426 files in other folders)
